# drone-m1

./: .gitignore  .gitmodules  AGENTS.md  README.md
.agents/: README.md  action-contracts-agent.md  architecture-agent.md  capability-registry-agent.md  ci-agent.md  control-plane-architect-agent.md  dashboard-agent.md  mcp-readiness-agent.md  mission-agent.md  mission-runtime-agent.md  operator-ui-agent.md  perception-agent.md  perception-runtime-agent.md  px4-interface-agent.md  px4-vendor-agent.md  qa-validation-agent.md  refactor-governance-agent.md  repo-bootstrap-agent.md  ros2-workspace-agent.md  runtime-orchestration-agent.md  safety-agent.md  safety-runtime-agent.md  scenario-runtime-agent.md  simulation-orchestrator-agent.md  telemetry-agent.md  telemetry-readmodel-agent.md
.codex/skills/: README.md
.codex/skills/action-capability-modeling/: SKILL.md
.codex/skills/ci-validation/: README.md  SKILL.md
.codex/skills/control-plane-design/: SKILL.md
.codex/skills/mcp-surface-design/: SKILL.md
.codex/skills/mission-runtime-refactor/: SKILL.md
.codex/skills/mission-system/: README.md  SKILL.md
.codex/skills/operator-ui-control-surface/: SKILL.md
.codex/skills/perception-operations/: SKILL.md
.codex/skills/perception-pipeline/: README.md  SKILL.md
.codex/skills/px4-integration/: README.md  SKILL.md
.codex/skills/qa-terminal-validation/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: bootstrap-check.yml  simulation-maturity.yml
.tmp-scenario-runtime-debug/debug_run/: launch.sh
.tmp-scenario-runtime-debug2/debug_run2/: launch.sh  result.json
.venv-r3/: pyvenv.cfg
.venv-r7/: pyvenv.cfg
apps/dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json
docker/phase1-validation/: Dockerfile
docker/phase3-validation/: Dockerfile
docs/: AGENTS-AND-SKILLS.md  APPLY-V2-PACKAGE.md  CHECKLIST-FRAMEWORK.md  DEVELOPMENT-STANDARDS.md  INITIAL-CODEX-PROMPT.md  MONOREPO-STRUCTURE.md  PHASE-0-OPEN-DECISIONS.md  PROJECT-ARCHITECTURE.md  PROJECT-CURRENT-STATE-AUDIT.md  PROJECT-EXECUTION-CHECKLIST.md  PROJECT-SCOPE.md  README.md  REPOSITORY-FILE-TREE-EXPLAINED.md  SIMULATION-ARCHITECTURE.md  TESTING-AND-FAILURE-MODEL.md
docs/contracts/: MAVSDK-SCENARIO-RUNNER.md  PHASE-3-ROS2-BRIDGE-CONTRACT.md  PHASE-4-ARCHITECTURE-HARDENING.md  PHASE-4-MISSION-CONTRACT.md  PHASE-5-SAFETY-CONTRACT.md  PHASE-6-PERCEPTION-CONTRACT.md  PHASE-7-OPERATIONS-CONTRACT.md  PHASE-8-SIMULATION-MATURITY-CONTRACT.md
docs/decisions/: HARDWARE-MIGRATION-CRITERIA.md  SIMULATION-STACK-DECISIONS.md
docs/reference/: PHASE-OWNERSHIP-MATRIX.md  REPOSITORY-FILE-TREE-EXPLAINED.md  ROBOTICS-ROS2-WORKSPACE-PX4-MSGS.md  SUBAGENT-PROMPTS.md
docs/runbooks/: LOCAL-SIMULATION-GUIDE.md  MAVSDK-SCENARIO-RUNNER-RUNBOOK.md  PHASE-1-BLOCKER-GAZEBO-HARMONIC-CONTAINER.md  PHASE-1-STARTUP-ORDER.md  PX4-SITL-HEADLESS-RUNBOOK.md  SIMULATION-OPERATIONS-TROUBLESHOOTING.md
docs/v2/: IMPLEMENTATION-ROTEIRO.md  INITIAL-CODEX-REFACTOR-PROMPT.md  MARK1-TO-MARK2-COMPATIBILITY-RULES.md  MASTER-IMPLEMENTATION-ROADMAP.md  PACKAGE-MANIFEST.md  README.md  REFACTOR-PRINCIPLES.md  REFACTOR-TERMINOLOGY.md
robotics/ros2_ws/: README.md
robotics/ros2_ws/src/drone_bringup/: README.md  package.xml  setup.py
robotics/ros2_ws/src/drone_bringup/config/: drone_mission.yaml  drone_perception.yaml  drone_px4.yaml  drone_safety.yaml  drone_telemetry.yaml
robotics/ros2_ws/src/drone_bringup/drone_bringup/: __init__.py
robotics/ros2_ws/src/drone_bringup/drone_bringup/launch/: __init__.py  bringup.launch.py
robotics/ros2_ws/src/drone_bringup/test/: test_package.py
robotics/ros2_ws/src/drone_msgs/: CMakeLists.txt  README.md  package.xml
robotics/ros2_ws/src/drone_msgs/msg/: MissionCommand.msg  MissionStatus.msg  PerceptionEvent.msg  PerceptionHeartbeat.msg  README.md  SafetyFault.msg  SafetyStatus.msg  TrackedObject.msg  VehicleCommand.msg  VehicleCommandStatus.msg  VehicleState.msg  VisionDetection.msg
robotics/ros2_ws/src/drone_safety/: README.md  package.xml  setup.cfg  setup.py
robotics/ros2_ws/src/drone_safety/drone_safety/: __init__.py  contracts.py  rules.py  safety_manager_node.py
robotics/ros2_ws/src/drone_safety/resource/: drone_safety
robotics/ros2_ws/src/drone_safety/test/: test_rules.py
robotics/ros2_ws/src/px4_msgs/: CMakeLists.txt  PINNING.md  README.md
scripts/bootstrap/: setup-mark1-ubuntu22.sh  validate-phase-0.sh
scripts/ci/: validate-phase-8.sh
scripts/scenarios/: README.md  run_scenario.sh  run_takeoff_land.sh  validate-phase-2-container.sh  validate-phase-2.sh
scripts/sim/: README.md  build-phase-1-container-image.sh  check-gz-harmonic-cli.sh  configure_px4_sim_params.py  phase-1-manifest.md  start.sh  stop.sh  validate-phase-1-container.sh  validate-phase-1.sh  vendor-px4-submodule.sh
services/control-api/: README.md  pyproject.toml
services/control-api/control_api/: __init__.py  app.py  main.py  mission_runtime.py  read_model.py  safety_runtime.py  scenario_runtime.py  scenarios.py  simulation_runtime.py  stores.py  vehicle_runtime.py
services/control-api/drone_control_api.egg-info/: SOURCES.txt  requires.txt  top_level.txt
services/control-api/tests/: test_app.py  test_scenario_runtime.py  test_simulation_runtime.py
services/telemetry-api/: README.md  pyproject.toml
services/telemetry-api/drone_telemetry_api.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
services/telemetry-api/src/: README.md
services/telemetry-api/src/telemetry_api/: __init__.py  main.py  models.py  store.py
services/telemetry-api/telemetry_api/: __init__.py  app.py  main.py  models.py  store.py
services/telemetry-api/tests/: test_api.py  test_app.py
simulation/: README.md
simulation/gazebo/: README.md
simulation/scenarios/: README.md  failsafe_gps_loss.json  failsafe_gps_loss.md  failsafe_rc_loss.json  failsafe_rc_loss.md  geofence_breach.json  geofence_breach.md  patrol_basic.json  patrol_basic.md  perception_target_tracking.json  perception_target_tracking.md  takeoff_land.json  takeoff_land.md
(+139 files in other folders)
