[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-control-api"
version = "0.1.0"
description = "Mark 1 control plane HTTP skeleton for the drone platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
control-api = "control_api.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
