<?xml version="1.0"?>
<package format="3">
  <name>drone_msgs</name>
  <version>0.0.0</version>
  <description>Shared domain contracts for the drone autonomy ROS 2 workspace.</description>
  <maintainer email="matheusalves@example.com">matheusalves</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
